[package]
authors       = ["MikhailMS <1488maiklm@gmail.com>"]
categories    = ["network-programming"]
description   = "Pure Rust implementation of RADIUS Server/Client"
documentation = "https://docs.rs/radius-rust/0.2.1"
edition       = "2018"
include       = [
  "Cargo.toml",
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
  "dict_examples/*",
  "examples/*",
  "src/*",
  "tests/*"
]
homepage      = "https://github.com/MikhailMS/rust-radius"
keywords      = ["radius", "radius-client", "radius-server"]
license       = "MIT"
name          = "radius-rust"
readme        = "README.md"
repository    = "https://github.com/MikhailMS/rust-radius"
version       = "0.2.1"

[features]
# Default doesn\t include anythin - keep it simple
default      = []
# In case one needs to use async RADIUS Server/Client
async-radius = [ "async-std", "futures" ]

[dependencies]
async-std   = { version = "1.9.0", optional = true }
futures     = { version = "0.3.13", optional = true }
log         = "0.4.14"
mio         = { version = "0.7.7", features = ["os-poll", "udp"] }
rand        = "0.7.3"
rust-crypto = "0.2.36"
thiserror   = "1.0.23"

[dev-dependencies]
simple_logger = { version = "1.11.0", default-features = false }
# async-std = "1.9.0"

[[example]]
name = "simple_radius_server"
