[package]
authors       = ["MikhailMS <1488maiklm@gmail.com>"]
categories    = ["network-programming"]
description   = "Pure Rust implementation of RADIUS Server/Client"
documentation = "https://docs.rs/radius-rust/0.3.0"
edition       = "2018"
include       = [
  "Cargo.toml",
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
  "dict_examples/*",
  "examples/*",
  "src/*",
  "tests/*"
]
homepage      = "https://github.com/MikhailMS/rust-radius"
keywords      = ["radius", "radius-client", "radius-server"]
license       = "MIT"
name          = "radius-rust"
readme        = "README.md"
repository    = "https://github.com/MikhailMS/rust-radius"
version       = "0.3.0"

[features]
# Default doesn\t include anythin - keep it simple
default        = []
# In case one plans to create Async RADIUS Client/Server
async-radius   = ["async-trait"]
# In case one plans to run Async examples
async-examples = [ "async-trait", "async-std", "futures" ]

[dependencies]
async-std   = { version = "1.9.0",  optional = true }
async-trait = { version = "0.1.48", optional = true }
futures     = { version = "0.3.13", optional = true }
log         = "0.4.14"
rand        = "0.7.3"
rust-crypto = "0.2.36"
thiserror   = "1.0.23"

[dev-dependencies]
mio           = { version = "0.7.7", features = ["os-poll", "udp"] }
simple_logger = { version = "1.11.0", default-features = false }

[[example]]
name = "sync_radius_server"

[[example]]
name = "sync_radius_client"

[[example]]
name              = "async_radius_server"
required-features = ["async-examples"]

[[example]]
name              = "async_radius_client"
required-features = ["async-examples"]

