[package]
authors       = ["MikhailMS <1488maiklm@gmail.com>"]
categories    = ["network-programming"]
description   = "Pure Rust implementation of RADIUS Server/Client"
documentation = "https://docs.rs/radius-rust/0.4.1"
edition       = "2018"
include       = [
  "Cargo.toml",
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
  "dict_examples/*",
  "examples/*",
  "src/*",
  "tests/*"
]
homepage      = "https://github.com/MikhailMS/rust-radius"
keywords      = ["radius", "radius-client", "radius-server"]
license       = "MIT"
name          = "radius-rust"
readme        = "README.md"
repository    = "https://github.com/MikhailMS/rust-radius"
version       = "0.4.1"

[features]
# Default doesn\t include anythin - keep it simple
default        = []
# In case one plans to create Async RADIUS Client/Server
async-radius   = ["async-trait"]
# In case one plans to run Async examples
async-examples = [ "async-trait", "async-std", "futures" ]

[dependencies]
async-std   = { version = "1.9.0",  optional = true }
async-trait = { version = "0.1.48", optional = true }
futures     = { version = "0.3.13", optional = true }
rand        = "0.8.5"
md-5        = "0.10.1"
hmac        = "0.12.1"
thiserror   = "1.0.32"

[dev-dependencies]
mio           = { version = "0.7.7",  features = ["os-poll", "udp"] }
simple_logger = { version = "1.11.0", default-features = false }
log           = "0.4.17"

[[example]]
name = "sync_radius_server"

[[example]]
name = "sync_radius_client"

[[example]]
name              = "async_radius_server"
required-features = ["async-examples"]

[[example]]
name              = "async_radius_client"
required-features = ["async-examples"]

